--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
             class="dice hidden"
             data-id="dice"
             src="./dice-faces/dice-1.png"
+            alt="dice image"
           />
-          <!-- <img class="dice" src="./dice-faces/dice-2.png" />
-        <img class="dice" src="./dice-faces/dice-3.png" />
-        <img class="dice" src="./dice-faces/dice-4.png" />
-        <img class="dice" src="./dice-faces/dice-5.png" />
-        <img class="dice" src="./dice-faces/dice-6.png" /> -->
           <section
             class="player-section player-1-container player-container-style"
           >
@@ -42,7 +38,7 @@
               >
                 👑
               </div>
-              <h1 class="player-title player-title--1">Player One</h1>
+              <h2 class="player-title player-title--1">Player One</h2>
               <output
                 class="player-score player-score--style"
                 data-id="player-score--1"
@@ -70,7 +66,7 @@
               >
                 👑
               </div>
-              <h1 class="player-title player-title--2">Player Two</h1>
+              <h2 class="player-title player-title--2">Player Two</h2>
               <output
                 class="player-score player-score--style"
                 data-id="player-score--2"
@@ -96,7 +92,6 @@
               height="192"
               viewBox="0 0 256 256"
             >
-              <!-- <rect width="256" height="256" fill="none"></rect> -->
               <polyline
                 points="79.8 99.7 31.8 99.7 31.8 51.7"
                 fill="none"
@@ -114,7 +109,7 @@
                 stroke-width="16"
               ></path>
             </svg>
-            <p>Restart</p>
+            <span>Restart</span>
           </button>
           <button class="button button--roll" data-id="button--roll">
             <svg
@@ -125,7 +120,6 @@
               fill="#000000"
               viewBox="0 0 256 256"
             >
-              <!-- <rect width="256" height="256" fill="none"></rect> -->
               <rect
                 x="40"
                 y="40"
@@ -140,7 +134,7 @@
               ></rect>
               <circle cx="128" cy="128" r="12"></circle>
             </svg>
-            <p>Roll the dice</p>
+            <span>Roll the dice</span>
           </button>
           <button class="button button--hold" data-id="button--hold">
             <svg
@@ -151,7 +145,6 @@
               fill="#000000"
               viewBox="0 0 256 256"
             >
-              <!-- <rect width="256" height="256" fill="none"></rect> -->
               <path
                 d="M128,52a20,20,0,0,1,40,0v60"
                 fill="none"
@@ -177,10 +170,11 @@
                 stroke-width="16"
               ></path>
             </svg>
-            <p>Hold</p>
+            <span>Hold</span>
           </button>
         </div>
       </div>
+      <footer>&copy; Sue. See code at [[GitHub]]</footer>
     </main>
   </body>
 </html>
