Added GitHub link

--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
           </button>
         </div>
       </div>
-      <footer>&copy; Sue. See code at [[GitHub]]</footer>
+      <footer>
+        &copy; Sue. See code at
+        <a href="https://github.com/SueHafi/Pig-Dice-Game" target="_blank"
+          >GitHub</a
+        >
+      </footer>
     </main>
   </body>
 </html>
