--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           />
           <section
             class="player-section player-1-container player-container-style"
+            data-id="player-1-container"
           >
             <header class="section-header">
               <div
@@ -58,6 +59,7 @@
           </section>
           <section
             class="player-section player-2-container player-container-style"
+            data-id="player-2-container"
           >
             <header class="section-header">
               <div
