--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-    <link href="style.css" rel="stylesheet" />
-    <link href="queries.css" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <link href="./style.css" rel="stylesheet" />
+    <link href="./queries.css" rel="stylesheet" />
+    <script src="./script.js" defer></script>
     <title>Pig Dice Game</title>
   </head>
   <body>
