implemented "how to play" section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="instructions-btn" data-id="instructions-button">
           How to play
         </button>
-        <div class="instructions-container">
+        <div class="instructions-container hidden" data-id="instructions-box">
           <h3 class="instructions-title">How to play:</h3>
           <p class="instructions-text">
             In the pig dice game players take turns to roll a single dice as
@@ -192,7 +192,7 @@
         </div>
       </div>
       <footer>
-        &copy; Sue. See code at
+        &copy; Sue Hafizoglu. See code at
         <a href="https://github.com/SueHafi/Pig-Dice-Game" target="_blank"
           >GitHub</a
         >
